--- a/front/index.html
+++ b/front/index.html
@@ -106,7 +106,13 @@
                     location.href= ("SubmitHomework.html");
                     break;
                   case 'teacher':
-                    location.href= ("SubmitHomework.html");
+                    location.href= ("HomeworkManagement.html");
+                    break;
+                  case 'ta':
+                    location.href= ("HomeworkManagement.html");
+                    break;
+                  case 'admin':
+                    location.href= ("AccountManagement.html");
                     break;
 
                   default:
