--- a/front/homework_new.html
+++ b/front/homework_new.html
@@ -49,23 +49,23 @@
                     新增作業
                 </div>
                 <div class="card-body">
-                    <form>
+                  <form id="form" >
                     <div class="form-group row">
                         <label for="" class="col-sm-2 col-form-label">作業名稱</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" id="" placeholder="請輸入作業名稱">
+                            <input type="text" class="form-control" name="hwName" placeholder="請輸入作業名稱">
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="" class="col-sm-2 col-form-label">作業說明</label>
                         <div class="col-sm-10">
-                            <textarea class="form-control" id="" rows="3" placeholder="請輸入作業說明"></textarea>
+                            <textarea class="form-control" name="outline" rows="3" placeholder="請輸入作業說明"></textarea>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="" class="col-sm-2 col-form-label">繳交期限</label>
                         <div class="col-sm-10">
-                            <input type="date" class="form-control" id="">
+                            <input type="date" class="form-control" name="deadline">
                         </div>
                     </div>
                     <fieldset class="form-group">
@@ -74,20 +74,21 @@
                         <div class="col-sm-10">
                           <div class="form-check">
                             <label class="form-check-label">
-                              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked> 開放
+                              <input class="form-check-input" type="radio" name="late" id="gridRadios1" value=true checked> 開放
                             </label>
                           </div>
                           <div class="form-check">
                             <label class="form-check-label">
-                              <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2"> 關閉
+                              <input class="form-check-input" type="radio" name="late" id="gridRadios2" value=false> 關閉
                             </label>
                           </div>
                         </div>
                       </div>
                     </fieldset>
                     <div class="div_foot">
-                        <button type="submit" class="btn btn-primary">確認新增</button>
+                        <button type="button" id="btn_submit" class="btn btn-primary">確認新增</button>
                     </div>
+                      <input type="hidden" name="courseId" id="courseId">
                     </form>
                 </div>
             </div>
@@ -100,5 +101,40 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+
+          <!-- jQuery -->
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+          <script src="js/params.js"></script>
+
+    <script type="text/javascript">
+
+    console.log(urlParams.courseId[0]);
+    $('#courseId').val(urlParams.courseId[0]);
+
+      $("#btn_submit").click(function() {
+        console.log('btn_submit pressed');
+        console.log(new FormData($('#form')[0]));
+        $.ajax({
+          url: 'http://127.0.0.1:8080/SE_final/api/createHw',
+          type: 'POST',
+          cache: false,
+          data: new FormData($('#form')[0]),
+          processData: false,
+          contentType: false,
+
+          success: function(e){
+              console.log('成功');
+
+          },
+
+          error: function(xhr, ajaxOptions, thrownError){
+              console.log('失敗');
+              console.log(xhr.responseText);
+              console.log(xhr.status);
+              console.log(thrownError);
+          }
+        });
+      });
+    </script>
   </body>
 </html>
