--- a/front/homework_scoring.html
+++ b/front/homework_scoring.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-    <link rel="stylesheet" href="main_style.css">
+    <link rel="stylesheet" href="css/main_style.css">
     <style>
       .div_body{
         padding: 10px 0;
@@ -50,7 +50,7 @@
             <tbody>
                 <tr>
                     <th scope="row">作業檔案</th>
-                    <td><a href="" id="a_file">檔案下載</a></td>
+                    <td><a href="http://127.0.0.1:8080/SE_final/api/download/1" id="a_file">檔案下載</a></td>
                 </tr>
                 <tr>
                     <th scope="row">補充說明</th>
