--- a/front/homework_new.html
+++ b/front/homework_new.html
@@ -126,7 +126,7 @@
 
           success: function(e){
               console.log('成功');
-
+              location.href= ("HomeworkManagement.html");
           },
 
           error: function(xhr, ajaxOptions, thrownError){
