--- a/front/account_new.html
+++ b/front/account_new.html
@@ -89,7 +89,7 @@
               </div>
             </div>
             <div class="div_foot">
-              <button type="submit" id="btn_submit" class="btn btn-primary">確認新增</button>
+              <button type="button" id="btn_submit" class="btn btn-primary">確認新增</button>
             </div>
           </form>
         </div>
@@ -119,8 +119,20 @@
         cache: false,
         data: new FormData($('#form')[0]),
         processData: false,
-        contentType: false
-      }).done(function(res) {}).fail(function(res) {});
+        contentType: false,
+
+        success: function(e){
+            console.log('成功');
+            location.href= ("index.html");
+        },
+
+        error: function(xhr, ajaxOptions, thrownError){
+          console.log('失敗');
+          console.log(xhr.responseText);
+          console.log(xhr.status);
+          console.log(thrownError);
+        }
+      });
     });
   </script>
 
