--- a/front/CourseManagement.html
+++ b/front/CourseManagement.html
@@ -52,40 +52,22 @@
               <th scope="col">課號</th>
               <th scope="col">學年度-學期</th>
               <th scope="col">課程名稱</th>
+              <th scope="col">授課教授</th>
               <th scope="col">學分</th>
               <th scope="col">時數</th>
+              <th>授課助教</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <th scope="row">232954</th>
-              <td>106-1</td>
-              <td>軟體工程</td>
-              <td>3.0</td>
-              <td>3</td>
-            </tr>
-            <tr>
-              <th scope="row">232936</th>
-              <td>106-1</td>
-              <td>作業系統</td>
-              <td>3.0</td>
-              <td>3</td>
-            </tr>
-            <tr>
-              <th scope="row">232954</th>
-              <td>106-1</td>
-              <td>樣式導向軟體設計</td>
-              <td>3.0</td>
-              <td>3</td>
-            </tr>
+          <tbody class="tr-group">
           </tbody>
         </table>
         <div class="row">
           <div class="col">
-            <button type="button" class="btn btn-success btn-block">匯入課程</button>
+            <button id="inportCourse" type="button" class="btn btn-success btn-block">匯入課程</button>
+            <input id="courseFile" type="file" style="display: none;" />
           </div>
           <div class="col">
-            <button type="button" class="btn btn-danger btn-block">清除課程</button>
+            <button id="deleteCourse"type="button" class="btn btn-danger btn-block">清除課程</button>
           </div>
         </div>
       </div>
@@ -97,5 +79,117 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="js/papaparse.js"></script>
+
+    <script type="text/javascript">
+
+    $('#inportCourse').on('click', function() {
+        $('#courseFile').trigger('click');
+      });
+
+    $('#courseFile').change(function(evt) {
+        var file = evt.target.files[0];
+        Papa.parse(file, {
+          header: true,
+          delimiter: ",",
+          skipEmptyLines: true,
+          complete: function(results) {
+            var data = results.data;
+            for (key in data) {
+              var form_data = new FormData();
+              for ( var key2 in data[key] ) {
+                  form_data.append(key2, data[key][key2]);
+              }
+
+              $.ajax({
+                url: 'http://127.0.0.1:8080/SE_final/api/createClass',
+                type: 'POST',
+                cache: false,
+                data: form_data,
+                processData: false,
+                contentType: false,
+
+                success: function(e){
+                    console.log('成功');
+                    window.location.reload(false);
+                },
+
+                error: function(xhr, ajaxOptions, thrownError){
+                  console.log('失敗');
+                  console.log(xhr.responseText);
+                  console.log(xhr.status);
+                  console.log(thrownError);
+                }
+              });
+            }
+          }
+        });
+        $("#courseFile").val("");
+      });
+
+      $('#deleteCourse').on('click', function() {
+        $.ajax({
+          url: 'http://127.0.0.1:8080/SE_final/api/deleteCourse',
+          type: 'POST',
+          cache: false,
+          data: {
+              'user_id': 1
+          },
+          processData: false,
+          contentType: false,
+
+          success: function(e){
+              console.log('成功');
+              window.location.reload(true);
+          },
+
+          error: function(xhr, ajaxOptions, thrownError){
+            console.log('失敗');
+            console.log(xhr.responseText);
+            console.log(xhr.status);
+            console.log(thrownError);
+          }
+        });
+      });
+
+
+    $.ajax({
+        url: "http://127.0.0.1:8080/SE_final/api/getAllClass",
+        data: {
+            'user_id': 1
+        },
+        type:"POST",
+        dataType:'json',
+
+        success: function(JData){
+          console.log('成功');
+          console.log(JData);
+
+          $(".tr-group").empty();
+          var i = 0;
+          $.each(JData, function() {
+            $(".tr-group").append("<tr>\
+                <th scope='row'>"+JData[i].course_id+"</th>\
+                <td>"+JData[i].semester+"</td>\
+                <td>"+JData[i].course_name+"</td>\
+                <td>"+JData[i].professor+"</td>\
+                <td>"+JData[i].credits.toFixed(1)+"</td>\
+                <td>"+JData[i].hours+"</td>\
+                <td>"+JData[i].assistant+"</td>\
+              </tr>");
+            i++;
+          });
+        },
+
+        error: function(xhr, ajaxOptions, thrownError){
+          console.log('失敗');
+          console.log(xhr.responseText);
+          console.log(xhr.status);
+          console.log(thrownError);
+        }
+    });
+    </script>
   </body>
 </html>
